--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "colors": "^1.4.0",
     "fake-useragent": "^1.0.1",
     "random-ua": "^0.0.6",
-    "sync-request": "^6.1.0"
+    "sync-request": "^6.1.0",
+    "user-agents": "^1.0.1444"
   }
 }
